--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,3 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-attrs==25.3.0
-audioop-lts==0.2.1
-babel==2.17.0
-beautifulsoup4==4.13.4
-blis==1.3.0
-catalogue==2.0.10
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-ChatterBot==1.2.3
-chatterbot-corpus==1.2.2
-click==8.2.1
-cloudpathlib==0.21.1
-colorama==0.4.6
-comtypes==1.4.11
-confection==0.1.5
-cymem==2.0.11
-docxcompose==1.4.0
-docxtpl==0.20.0
-et_xmlfile==2.0.0
-fuzzywuzzy==0.18.0
-greenlet==3.2.2
-h11==0.16.0
-idna==3.10
-Jinja2==3.1.6
-langcodes==3.5.0
-language_data==1.3.0
-Levenshtein==0.27.1
-lxml==5.4.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mathparse==0.1.2
-mdurl==0.1.2
-MouseInfo==0.1.3
-murmurhash==1.0.13
-numpy==2.2.5
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-outcome==1.3.0.post0
-packaging==25.0
-pandas==2.2.3
-pefile==2023.2.7
-pillow==11.2.1
-preshed==3.0.10
-pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.11.5
-pydantic_core==2.33.2
-PyGetWindow==0.0.9
-Pygments==2.19.1
-pyinstaller==6.13.0
-pyinstaller-hooks-contrib==2025.4
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-Levenshtein==0.27.1
-pyttsx3==2.98
-pytweening==1.2.0
-pytz==2025.2
-pywin32==310
-pywin32-ctypes==0.2.3
-RapidFuzz==3.13.0
-requests==2.32.3
-rich==14.0.0
-selenium==4.32.0
-setuptools==80.6.0
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.14.3
-SQLAlchemy==2.0.41
-srsly==2.5.1
-standard-aifc==3.13.0
-standard-chunk==3.13.0
-thinc==8.3.6
-tkinterdnd2==0.4.3
-tqdm==4.67.1
-trio==0.30.0
-trio-websocket==0.12.2
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-wasabi==1.1.3
-weasel==0.4.1
-websocket-client==1.8.0
-wikipedia==1.4.0
-wrapt==1.17.2
-wsproto==1.2.0
+dash>=2.0.0
+plotly>=5.0.0
+pandas>=1.3.0
